Added Module Config options for a hosting provider logo.
Updated the Wordpress script installer to version 2.1.3, and Gallery to 2.2.1.
Fixed bugs that prevent owner limits from being mass-updated, and caused bandwidth limits to be un-necessarily changed.
Re-factored all code for displaying quota fields, so that the text box is greyed out when 'Unlimited' is selected.
Fixed the cPanel migration code to handle new Maildir++ format mailboxes.
Added Prev/Next buttons to template form, for easily navigating through sections.
Email to all domain owners and all mailboxes in a domain can now use substitions like ${DOM} and ${QUOTA}.
Added the virtusertable plugin to the Squirrelmail script installer, so that users can login with their email addresses.
Change the Module Config option for new domain passwords to add an option to require the password to be entered twice.
Added the Search Mail Logs page, which can show the destination of email to your system regardless of the final delivery method (local, autoreply, spam, virus, or forwarded). To support this, Virtualmin configures Procmail to log the destination file for all email it processes, to /var/log/procmail.log.
Added the search-maillogs.pl command-line script, with the same functionality as the web-based mail search.
Removed the 'All virtual servers are name-based' Module Config option, as this function has been superceded by support for multiple shared IP addresses (and was confusing to boot).
Added a Module Config option for a Unix group to add all domain owners to.
Added arrows to the Custom Links page to move them up and down.
Added a new section to the Custom Links page for defining categories, and menus for assiging links into categories.
Added an option in the Apache website section of the server templates for specifying a php.ini file to copy into new virtual servers' ~/etc directory, instead of the global default. This .ini file can also contain substitions like ${DOM} and ${HOME}.