@@ -48,6 +48,3 @@
     returning to domain list (and refresh left frame if needed)
 	- http://www.virtualmin.com/bug-tracker/bug?bug%5fnumber=747
 
-  - option to make php.ini non-editable
-	- https://www.virtualmin.com/ticket-tracker/bug?bug%5fnumber=399
-
