@@ -2129,7 +2129,7 @@ tmpl_disabled_urlnone=None (local HTML)
 tmpl_phpmode=Default PHP exection mode
 tmpl_phpver=Default PHP version
 tmpl_php_ini=Template PHP configuration file
-tmpl_php_noedit=Allow editing of PHP configuration file?
+tmpl_php_noedit=Allow editing of PHP configuration?
 tmpl_rubymode=Default Ruby execution mode
 tmpl_phpverdef=Lowest available
 tmpl_edisabled_url=Missing or invalid disabled website URL
