@@ -6337,6 +6337,7 @@ push(@rv, { 'id' => 0,
 					int($config{'ruby_suexec'}),
 	    'web_phpver' => $config{'phpver'},
 	    'web_php_ini' => $config{'php_ini'},
+	    'web_php_noedit' => int($config{'php_noedit'}),
 	    'webalizer' => $config{'def_webalizer'} || "none",
 	    'disabled_web' => $config{'disabled_web'} || "none",
 	    'disabled_url' => $config{'disabled_url'} || "none",
@@ -6518,6 +6519,7 @@ if ($tmpl->{'id'} == 0) {
 	$config{'ruby_suexec'} = $tmpl->{'web_ruby_suexec'};
 	$config{'phpver'} = $tmpl->{'web_phpver'};
 	$config{'php_ini'} = $tmpl->{'web_php_ini'};
+	$config{'php_noedit'} = $tmpl->{'web_php_noedit'};
 	$config{'def_webalizer'} = $tmpl->{'webalizer'} eq "none" ? "" :
 					$tmpl->{'webalizer'};
 	$config{'disabled_web'} = $tmpl->{'disabled_web'} eq "none" ? "" :
